--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -56,6 +56,7 @@
       @include rmaxwd(1717) {
         width: 160px;
         height: 160px;
+        margin-top: 0;
       }
 
       @include lg {
